macros/tests/trybuild/trait_alias.rs
use serde_args_macros::help;

#[help]
trait Foo = Iterator + Sync;

fn main() {}
